# craftinginterpreters

./: .editorconfig  .gitignore  Cargo.toml  README.md
src/: environment.rs  expr.rs  interpreter.rs  lox_callable.rs  main.rs  parser.rs  resolver.rs  scanner.rs  stmt.rs
test/: unexpected_character.lox
test/assignment/: grouping.lox  infix_operator.lox  prefix_operator.lox  to_this.lox
test/call/: bool.lox  nil.lox  num.lox  object.lox  string.lox
test/class/: inherit_self.lox  local_inherit_self.lox
test/constructor/: call_init_early_return.lox  call_init_explicitly.lox  default.lox  default_arguments.lox  early_return.lox  extra_arguments.lox  missing_arguments.lox  return_in_nested_function.lox  return_value.lox
test/field/: call_nonfunction_field.lox  get_on_bool.lox  get_on_class.lox  get_on_function.lox  get_on_nil.lox  get_on_num.lox  get_on_string.lox  set_on_bool.lox  set_on_class.lox  set_on_function.lox  set_on_nil.lox  set_on_num.lox  set_on_string.lox  undefined.lox
test/for/: class_in_body.lox  fun_in_body.lox  statement_condition.lox  statement_increment.lox  statement_initializer.lox  var_in_body.lox
test/function/: body_must_be_block.lox  extra_arguments.lox  local_mutual_recursion.lox  missing_arguments.lox  missing_comma_in_parameters.lox  too_many_arguments.lox  too_many_parameters.lox
test/if/: class_in_else.lox  class_in_then.lox  fun_in_else.lox  fun_in_then.lox  var_in_else.lox  var_in_then.lox
test/inheritance/: inherit_from_function.lox  inherit_from_nil.lox  inherit_from_number.lox  parenthesized_superclass.lox
(+64 files in other folders)
