[package]
name = "craft"
version = "0.1.0"
authors = ["Ivan Danov <idanov@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.2.0"
itertools = "0.13.0"
rustyline = "15.0.0"
log = "0.4.22"
env_logger = "0.11.6"
