[package]
name = "rjlox"
version = "0.1.0"
authors = ["Ivan Danov <idanov@users.noreply.github.com>"]
edition = "2021"

[dependencies]
colored = "2.2.0"
itertools = "0.13.0"
rustyline = "15.0.0"
log = "0.4.22"
env_logger = "0.11.6"

[dev-dependencies]
assert_cmd = "2.0.16"
regex = "1.11.1"
rstest = "0.24.0"
